<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.TodayWeatherFragment"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/color_black"
                android:textSize="@dimen/country_detail_txt"
                />

            <TextView
                android:id="@+id/today_weather_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/color_gray"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/country_detail_txt"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textColor="@color/color_black"
                android:textSize="@dimen/country_detail_txt"
                />

            <TextView
                android:id="@+id/today_weather_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textColor="@color/color_gray"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/country_detail_txt"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@color/color_black"
                android:textSize="@dimen/country_detail_txt"
                />

            <TextView
                android:id="@+id/today_weather_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@color/color_gray"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/country_detail_txt"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/color_black"
                android:textSize="@dimen/country_detail_txt"
                />

            <TextView
                android:id="@+id/today_weather_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/color_gray"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/country_detail_txt"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>