<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CountryDetailsFragment"
    android:orientation="horizontal"
    android:weightSum="2"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/color_black"
                android:textSize="@dimen/country_detail_txt"
                />

            <TextView
                android:id="@+id/country_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/color_gray"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/country_detail_txt"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textColor="@color/color_black"
                android:textSize="@dimen/country_detail_txt"
                />

            <TextView
                android:id="@+id/country_detail_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textColor="@color/color_gray"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/country_detail_txt"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capital"
                android:textColor="@color/color_black"
                android:textSize="@dimen/country_detail_txt"
                />

            <TextView
                android:id="@+id/country_detail_capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capital"
                android:textColor="@color/color_gray"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/country_detail_txt"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/population"
                android:textColor="@color/color_black"
                android:textSize="@dimen/country_detail_txt"
                />

            <TextView
                android:id="@+id/country_detail_population"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/population"
                android:textColor="@color/color_gray"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/country_detail_txt"
                />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/country_detail_flag"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_weight="1"
        />


</LinearLayout>